--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
-    
+<!-- jquery -->
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
+<!-- bootstrap -->
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 </html>
