--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+    <footer>
+        
+    </footer>
+
+    
 <!-- jquery -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
 <!-- bootstrap -->
