--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
                         <li class="nav-item"><a class="nav-link" href="">Donation</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="nav-item"><a href="#" class="search"><i class="lnr lnr-magnifier"></i></a></li>
-                    </ul>
+                    <button type="submit" class="btn"><span class="fa fa-search"></span></button>
+        
                 </div> 
             </div>
         </nav>
