--- a/index.html
+++ b/index.html
@@ -28,13 +28,29 @@
                         <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
                     </ul>
                     <button type="submit" class="btn"><span class="fa fa-search"></span></button>
-        
                 </div> 
             </div>
         </nav>
     </header>
-    <section>
-
+    <section class="about_area section_gap">
+        <div class="container">
+            <div class="section_title text-center">
+                <h2>Welcome to Faith Church</h2>
+                <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
+            </div>
+            <div class="row">
+                <div class="col-md-6 d_flex">
+                    <div class="about_content flex">
+                        <h3 class="title_color">Did not find your Package Feel free to ask us. We‘ll make it for you</h3>
+                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+                        <a href="#" class="about_btn btn_hover">Read Full Story</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="./public/images/about.jpg" alt="abou_img">
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
 
