--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                         <li class="nav-item"><a class="nav-link" href="">Donation</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
                     </ul>
-                    <button type="submit" class="btn"><span class="fa fa-search"></span></button>
+                    <button type="submit" class="btn">
+                        <input type="text" class="list-style-type-none">
+                        <span class="fa fa-search"></span></button>
                 </div> 
             </div>
         </nav>
@@ -52,6 +54,30 @@
             </div>
         </div>
     </section>
+        <section class="features_area mt-5">
+            <div class="row m0">
+                <div class="col-md-3 features_item">
+                    <h3>Spreading Light to world</h3>
+                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence and upturning of the natural.</p>
+                    <a href="#" class="btn_hover view_btn">View Details</a>
+                </div>
+                <div class="col-md-3 features_item">
+                    <h3>Spreading Light to world</h3>
+                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence and upturning of the natural.</p>
+                    <a href="#" class="btn_hover view_btn">View Details</a>
+                </div>
+                <div class="col-md-3 features_item">
+                    <h3>Spreading Light to world</h3>
+                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence and upturning of the natural.</p>
+                    <a href="#" class="btn_hover view_btn">View Details</a>
+                </div>
+                <div class="col-md-3 features_item">
+                    <h3>Spreading Light to world</h3>
+                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence and upturning of the natural.</p>
+                    <a href="#" class="btn_hover view_btn">View Details</a>
+                </div>
+            </div>
+        </section>
     <footer>
 
     </footer>
