--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
     <section class="about_area section_gap">
         <div class="container">
             <div class="section_title text-center">
-                <h2>Welcome to Faith Church</h2>
+                <h2 class="pt-5">Welcome to Faith Church</h2>
                 <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
             </div>
-            <div class="row">
-                <div class="col-md-6 d_flex">
+            <div class="row mt-5">
+                <div class="col-md-6 d_flex mt-5">
                     <div class="about_content flex">
                         <h3 class="title_color">Did not find your Package Feel free to ask us. We‘ll make it for you</h3>
                         <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
                         <a href="#" class="about_btn btn_hover">Read Full Story</a>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mt-5">
                     <img src="./public/images/about.jpg" alt="abou_img">
                 </div>
             </div>
@@ -78,8 +78,18 @@
                 </div>
             </div>
         </section>
-    <footer>
-
+    <footer class="footer-area mt-5">
+        <div class="row footer-bottom d-flex align-content-end pl-5">
+            <p class="col-lg-8 col-sm-8 footer-text m-0">
+                © 2020 Designed and Developed by <a target="_blank" rel="nofollow" href="https://brandingpilots.com">Branding Pilots</a>
+            </p>
+            <div class="col-lg-4 col-sm-4 footer-social pr-5">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-dribbble"></i></a>
+                <a href="#"><i class="fab fa-behance"></i></a>
+            </div>
+        </div>
     </footer>
 
     
