--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kadir</title>
     <link rel="stylesheet" href="./public/css/app.css">
 </head>
+
 <body>
     <header class="header_area">
-            
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand logo_h" href=""><img src="./public/images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                <a class="navbar-brand logo_h mr-5" href="#"><img src="./public/images/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item active"><a class="nav-link" href="">Home</a></li> 
+
+                <div class="collapse navbar-collapse offset ml-4" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav mr-auto menu_nav ls-auto ml-4">
+                        <li class="nav-item active"><a class="nav-link" href="">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Minisrtries</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Event</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Donation</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+                        <li class="nav-item"><button type="submit" class="btn nav-link">
+                        <span class="fa fa-search "></span></button></li>
                     </ul>
-                    <button type="submit" class="btn">
-                        <input type="text" class="list-style-type-none">
-                        <span class="fa fa-search"></span></button>
-                </div> 
+                </div>
             </div>
         </nav>
     </header>
@@ -38,13 +39,17 @@
         <div class="container">
             <div class="section_title text-center">
                 <h2 class="pt-5">Welcome to Faith Church</h2>
-                <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
+                <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from
+                </p>
             </div>
             <div class="row mt-5">
                 <div class="col-md-6 d_flex mt-5">
                     <div class="about_content flex">
-                        <h3 class="title_color">Did not find your Package Feel free to ask us. We‘ll make it for you</h3>
-                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+                        <h3 class="title_color">Did not find your Package Feel free to ask us. We‘ll make it for you
+                        </h3>
+                        <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
+                            standards especially in the workplace. That’s why it’s crucial that, as women, our behavior
+                            on the job is beyond reproach. inappropriate behavior is often laughed.</p>
                         <a href="#" class="about_btn btn_hover">Read Full Story</a>
                     </div>
                 </div>
@@ -54,34 +59,39 @@
             </div>
         </div>
     </section>
-        <section class="features_area mt-5">
-            <div class="row m0">
-                <div class="col-md-3 features_item">
-                    <h3>Spreading Light to world</h3>
-                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence and upturning of the natural.</p>
-                    <a href="#" class="btn_hover view_btn">View Details</a>
-                </div>
-                <div class="col-md-3 features_item">
-                    <h3>Spreading Light to world</h3>
-                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence and upturning of the natural.</p>
-                    <a href="#" class="btn_hover view_btn">View Details</a>
-                </div>
-                <div class="col-md-3 features_item">
-                    <h3>Spreading Light to world</h3>
-                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence and upturning of the natural.</p>
-                    <a href="#" class="btn_hover view_btn">View Details</a>
-                </div>
-                <div class="col-md-3 features_item">
-                    <h3>Spreading Light to world</h3>
-                    <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from innocence and upturning of the natural.</p>
-                    <a href="#" class="btn_hover view_btn">View Details</a>
-                </div>
+    <section class="features_area mt-5">
+        <div class="row m0">
+            <div class="col-md-3 features_item">
+                <h3>Spreading Light to world</h3>
+                <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from
+                    innocence and upturning of the natural.</p>
+                <a href="#" class="btn_hover view_btn">View Details</a>
             </div>
-        </section>
+            <div class="col-md-3 features_item">
+                <h3>Spreading Light to world</h3>
+                <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from
+                    innocence and upturning of the natural.</p>
+                <a href="#" class="btn_hover view_btn">View Details</a>
+            </div>
+            <div class="col-md-3 features_item">
+                <h3>Spreading Light to world</h3>
+                <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from
+                    innocence and upturning of the natural.</p>
+                <a href="#" class="btn_hover view_btn">View Details</a>
+            </div>
+            <div class="col-md-3 features_item">
+                <h3>Spreading Light to world</h3>
+                <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from
+                    innocence and upturning of the natural.</p>
+                <a href="#" class="btn_hover view_btn">View Details</a>
+            </div>
+        </div>
+    </section>
     <footer class="footer-area mt-5">
         <div class="row footer-bottom d-flex align-content-end pl-5">
             <p class="col-lg-8 col-sm-8 footer-text m-0">
-                © 2020 Designed and Developed by <a target="_blank" rel="nofollow" href="https://brandingpilots.com">Branding Pilots</a>
+                © 2020 Designed and Developed by <a target="_blank" rel="nofollow"
+                    href="https://brandingpilots.com">Branding Pilots</a>
             </p>
             <div class="col-lg-4 col-sm-4 footer-social pr-5">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -92,11 +102,12 @@
         </div>
     </footer>
 
-    
-<!-- jquery -->
+
+    <!-- jquery -->
     <script src="./node_modules/jquery/dist/jquery.js"></script>
-<!-- bootstrap -->
+    <!-- bootstrap -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
+
 </html>
